--- a/src/assets/i18n/kh.json
+++ b/src/assets/i18n/kh.json
@@ -1,5 +1,20 @@
 {
     "LOGIN": "ចូលទៅក្នុងប្រពន្ធ័",
     "USERNAME": "ឈ្មោះប្រើប្រាស់",
-	"PASSWORD": "លេខកូដសម្ងាត់"
+    "PASSWORD": "លេខកូដសម្ងាត់",
+    "LOGIN_ERROR_CONENT": "បញ្ចូលព័ត៌មានខុស! សូមព្យាយាមម្តងទៀត។",
+    "ERROR": "កំហុស",
+    "OK": "យល់ព្រម",
+    "HOME_PAGE": {
+        "TITLE": "ខេជីអល",
+        "BTN1": "ពត៌មានទូទៅ",
+		"BTN2": "ស្ថានភាពក្រុមហ៊ុន",
+		"BTN3": "ការគណនាពន្ធ",
+		"BTN4": "សេវាកម្ម"
+    },
+    "SIDE_MENU": {
+		"MENU1": "បញ្ជីពាក្យស្នើរ",
+		"MENU2": "ទូឯកសារ",
+		"CONTACT_US": "ទាក់ទង​មក​ពួក​យើង"
+	}
 }
