--- a/src/assets/i18n/kh.json
+++ b/src/assets/i18n/kh.json
@@ -1,5 +1,6 @@
 {
     "LOGIN": "ចូលទៅក្នុងប្រពន្ធ័",
+    "LOGOUT": "ចាកចេញ",
     "USERNAME": "ឈ្មោះប្រើប្រាស់",
     "PASSWORD": "លេខកូដសម្ងាត់",
     "LOGIN_ERROR_CONENT": "បញ្ចូលព័ត៌មានខុស! សូមព្យាយាមម្តងទៀត។",
