--- a/src/assets/i18n/kh.json
+++ b/src/assets/i18n/kh.json
@@ -9,13 +9,43 @@
     "HOME_PAGE": {
         "TITLE": "ខេជីអល",
         "BTN1": "ពត៌មានទូទៅ",
-		"BTN2": "ស្ថានភាពក្រុមហ៊ុន",
-		"BTN3": "ការគណនាពន្ធ",
-		"BTN4": "សេវាកម្ម"
+        "BTN2": "ស្ថានភាពក្រុមហ៊ុន",
+        "BTN3": "ការគណនាពន្ធ",
+        "BTN4": "សេវាកម្ម"
     },
     "SIDE_MENU": {
 		"MENU1": "បញ្ជីពាក្យស្នើរ",
 		"MENU2": "ទូឯកសារ",
 		"CONTACT_US": "ទាក់ទង​មក​ពួក​យើង"
+  	},
+	"MOC": {
+		"HEADER": "ក្រសួងពាណិជ្ជកម្ម",
+		"REGISTRATION_ID": "ចុះបញ្ជីពាណិជ្ជកម្មលេខ",
+		"NOTED_DATE": "ចុះថ្ងៃទី",
+		"CAPITAL_REGISTRATION": "ដើមទុនចុះបញ្ជី",
+		"TYPE": "ប្រភេទ",
+		"ANNUAL_SUBMISSION_DATE": "ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ",
+		"USERNAME": "ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម",
+		"PASSWORD": "លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម",
+		"DOWNLOAD_PDF": "ទាញយកឯកសារជា PDF",
+		"MOC_CERTIFICATE": "វិញ្ញាបនប័ត្រចុះបញ្ជីពាណិជ្ជកម្ម",
+		"BUSINESS_EXTRACT": "សម្រង់ក្រុមហ៊ុន",
+		"RIEL": "រៀល"
+	},
+    "GDT": "អគ្គនាយកដ្ឋានពន្ធដារ",
+    "COMPANY_STATUS": {
+        "HEADER": "ស្ថានភាពក្រុមហ៊ុន",
+        "TAB1": "ពន្ធប្រចាំខែ",
+		"TAB2": "ពន្ធប្រចាំឆ្នាំ"
+    },
+    "TAX_CALCULATION": {
+        "HEADER": "ការគណនាពន្ធ",
+        "BTN1": "ការគណនាពន្ធទូទៅ",
+		"BTN2": "ការគណនាពន្ធប្រាក់បៀវត្ស"
+	},
+	"COMPANY_TYPE": {
+		"SOLE_PROPRIETORSHIPS": "សហគ្រាសឯកបុគ្គល",
+		"PRIVATE_LIMITED_COMPANY": "ក្រុមហ៊ុនឯកជនទទួលខុសត្រូវមានកម្រិត",
+		"PUBLIC_LIMITED_COMPANY": "ក្រុមហ៊ុនមហាជនទទួលខុសត្រូវមានកម្រិត"
 	}
 }
