--- a/src/assets/i18n/kh.json
+++ b/src/assets/i18n/kh.json
@@ -91,5 +91,19 @@
 		"OCTOBER": "តុលា",
 		"NOVEMBER": "វិច្ឆិកា",
 		"DECEMBER": "ធ្នូ"
+	},
+	"REQUEST_PAGE": {
+		"HEADER_1": "ពាក្យស្នើរដែលកំពុងរង់ចាំ",
+		"HEADER_2": "ពាក្យស្នើរដែលត្រូវបានទទួលយក",
+		"HEADER_3": "ពាក្យស្នើរដែលត្រូវបានបដិសេធ",
+		"CREATED_AT": "",
+		"ACCEPTED_AT": "",
+		"REJECTED_AT": "",
+		"DATE": "ថ្ងៃទី"
+	},
+	"REQUEST_STATUS": {
+		"pending": "កំពុងរង់ចាំ",
+		"accepted": "បានទទួលយក",
+		"rejected": "បានបដិសេធ"
 	}
 }
