--- a/src/assets/i18n/kh.json
+++ b/src/assets/i18n/kh.json
@@ -140,6 +140,15 @@
         "CANCEL": "លប់ចោល"
     },
     "SERVICE": {
-        "HEADER": "តម្លៃសេវាកម្ម"
+		"HEADER": "តម្លៃសេវាកម្ម",
+		"MONTHLY_TAX_HEADER": "សេវារៀបចំលិខិតប្រកាសពន្ធប្រចាំខែ",
+		"ANNUAL_TAX_HEADER": "សេវារៀបចំលិខិតប្រកាសពន្ធប្រចាំឆ្នាំ",
+		"PRICING_LESSTHAN_50": "សម្រាប់វិក័យប័ត្រតិចជាង 50",
+		"PRICING_MORETHAN_50": "សម្រាប់វិក័យប័ត្រច្រើនជាង 50",
+		"INCOME_TAX": "ពន្ធលើប្រាក់ចំណូល",
+		"PATENT_TAX": "ពន្ធប៉ាតង់",
+		"TRADEMARK_TAX": "ពន្ធលើផ្លាកយីហោ",
+		"PROPERTY_TAX": "ពន្ធលើផ្លាកយីហោ",
+		"TRANSPORTATION_TAX": "ពន្ធលើបធ្យោបាយដឹកជញ្ជូន"
     }
 }
