--- a/src/assets/i18n/kh.json
+++ b/src/assets/i18n/kh.json
@@ -149,6 +149,7 @@
 		"PATENT_TAX": "ពន្ធប៉ាតង់",
 		"TRADEMARK_TAX": "ពន្ធលើផ្លាកយីហោ",
 		"PROPERTY_TAX": "ពន្ធលើផ្លាកយីហោ",
-		"TRANSPORTATION_TAX": "ពន្ធលើបធ្យោបាយដឹកជញ្ជូន"
+        "TRANSPORTATION_TAX": "ពន្ធលើបធ្យោបាយដឹកជញ្ជូន",
+        "DOC_NAME": "ព័ត៌មានលំអិតអំពីតម្លៃសេវាកម្ម"
     }
 }
